Show waypoint comment on itinerary waypoint map marker

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -58,7 +58,9 @@
       'bower_components/angular-simple-logger/dist/angular-simple-logger.min.js',
       'bower_components/angular-validation-match/dist/angular-validation-match.min.js',
       'bower_components/angular-animate/angular-animate.min.js',
+      'bower_components/angular-sanitize/angular-sanitize.min.js',
       'bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js',
+      'bower_components/lodash/dist/lodash.min.js',
       'bower_components/socket.io-client/dist/socket.io.min.js',
       'bower_components/angular-socket-io/socket.min.js',
       'bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js',
