--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,9 @@
   <script src="bower_components/ui-leaflet-draw/dist/ui-leaflet-draw.js"></script>
   <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+  <script src="bower_components/lodash/dist/lodash.min.js"></script>
   <script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
   <script src="bower_components/angular-socket-io/socket.min.js"></script>
   <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js"></script>
