Implemented converting to and from Open Location Codes

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -64,6 +64,7 @@
       'bower_components/socket.io-client/dist/socket.io.min.js',
       'bower_components/angular-socket-io/socket.min.js',
       'bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js',
+      'bower_components/open-location-code/js/src/openlocationcode.min.js',
       'bower_components/pagedown/Markdown.Sanitizer.js',
       'bower_components/pagedown/Markdown.Extra.js',
       'bower_components/pagedown/Markdown.Editor.js',
