Added support for OSGB 1936 grid references

--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
   <script src="bower_components/angular-socket-io/socket.min.js"></script>
   <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js"></script>
   <script src="bower_components/open-location-code/js/src/openlocationcode.min.js"></script>
+  <script src="bower_components/proj4/dist/proj4.js"></script>
   <script src="bower_components/pagedown/Markdown.Converter.js"></script>
   <script src="bower_components/pagedown/Markdown.Sanitizer.js"></script>
   <script src="bower_components/pagedown/Markdown.Extra.js"></script>
