--- a/app/index-async.html
+++ b/app/index-async.html
@@ -65,6 +65,7 @@
       'bower_components/angular-socket-io/socket.min.js',
       'bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js',
       'bower_components/open-location-code/js/src/openlocationcode.min.js',
+      'bower_components/proj4/dist/proj4.js',
       'bower_components/pagedown/Markdown.Sanitizer.js',
       'bower_components/pagedown/Markdown.Extra.js',
       'bower_components/pagedown/Markdown.Editor.js',
