--- a/app/index-async.html
+++ b/app/index-async.html
@@ -27,6 +27,7 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-i18n/angular-locale_en-gb.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/pagedown/Markdown.Converter.js"></script>
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
   <script src="bower_components/leaflet-draw/dist/leaflet.draw.js"></script>
@@ -58,12 +59,12 @@
       'bower_components/angular-simple-logger/dist/angular-simple-logger.min.js',
       'bower_components/angular-validation-match/dist/angular-validation-match.min.js',
       'bower_components/angular-animate/angular-animate.min.js',
-      'bower_components/angular-sanitize/angular-sanitize.min.js',
       'bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js',
       'bower_components/lodash/dist/lodash.min.js',
       'bower_components/socket.io-client/dist/socket.io.min.js',
       'bower_components/angular-socket-io/socket.min.js',
       'bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js',
+	  'bower_components/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js',
       'bower_components/open-location-code/js/src/openlocationcode.min.js',
       'bower_components/proj4/dist/proj4.js',
       'bower_components/pagedown/Markdown.Sanitizer.js',
