Implemented read-only view of itinerary waypoint

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -83,6 +83,7 @@
       'js/itinerary-sharing-controller.js',
       'js/itinerary-sharing-report-controller.js',
       'js/itinerary-wpt-controller.js',
+      'js/itinerary-wpt-view-controller.js',
       'js/itinerary-route-name-controller.js',
       'js/itinerary-track-name-controller.js',
       'js/login-controller.js',
