--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,7 @@
   <script src="js/itinerary-sharing-controller.js"></script>
   <script src="js/itinerary-sharing-report-controller.js"></script>
   <script src="js/itinerary-wpt-controller.js"></script>
+  <script src="js/itinerary-wpt-view-controller.js"></script>
   <script src="js/itinerary-route-name-controller.js"></script>
   <script src="js/itinerary-track-name-controller.js"></script>
   <script src="js/login-controller.js"></script>
