Fix blank route and track names when joining unnamed paths

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,9 @@
   <script src="bower_components/ui-leaflet-draw/dist/ui-leaflet-draw.js"></script>
 </head>
 <body role="document">
+  <noscript>
+    You must enable JavaScript to use this application.
+  </noscript>
   <div id="wrapper">
     <div id="header" ng-cloak>
       <nav class="navbar navbar-inverse navbar-fixed-top">
