Implemented KML download of itinerary features

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -110,6 +110,7 @@
       'js/utils-factory.js',
       'js/user-preferences-service.js',
       'js/gpxdownload/gpxdownload-factory.js',
+      'js/kmldownload/kmldownload-factory.js',
       'js/gpxupload/gpxupload.js',
       'js/gpxupload/gpxupload-directive.js',
       'js/gpxupload/gpxupload-controller.js',
