--- a/app/index.html
+++ b/app/index.html
@@ -141,6 +141,7 @@
   <script src="js/utils-factory.js"></script>
   <script src="js/user-preferences-service.js"></script>
   <script src="js/gpxdownload/gpxdownload-factory.js"></script>
+  <script src="js/kmldownload/kmldownload-factory.js"></script>
   <script src="js/gpxupload/gpxupload.js"></script>
   <script src="js/gpxupload/gpxupload-directive.js"></script>
   <script src="js/gpxupload/gpxupload-controller.js"></script>
