Updated to use Angular 1.6.6

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -139,18 +139,18 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#/tracks">TRIP</a>
+            <a class="navbar-brand" href="#!/tracks">TRIP</a>
           </div>
           <div id="navbar" uib-collapse="navCollapsed" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a ng-click="navCollapsed=true" href="#/tracks">Tracking</a></li>
-              <li><a ng-click="navCollapsed=true" href="#/tracker-info">Tracker Info</a></li>
-              <li><a ng-click="navCollapsed=true" href="#/sharing">Track Sharing</a></li>
-              <li><a ng-click="navCollapsed=true" href="#/itineraries">Itineraries</a></li>
-              <li><a ng-click="navCollapsed=true" href="#/location">Location</a></li>
-              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="#/users">Users</a></li>
-              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="#/status">Status</a></li>
-              <li><a ng-click="navCollapsed=true" href="#/logout">Logout</a></li>
+              <li><a ng-click="navCollapsed=true" href="#!/tracks">Tracking</a></li>
+              <li><a ng-click="navCollapsed=true" href="#!/tracker-info">Tracker Info</a></li>
+              <li><a ng-click="navCollapsed=true" href="#!/sharing">Track Sharing</a></li>
+              <li><a ng-click="navCollapsed=true" href="#!/itineraries">Itineraries</a></li>
+              <li><a ng-click="navCollapsed=true" href="#!/location">Location</a></li>
+              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="#!/users">Users</a></li>
+              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="#!/status">Status</a></li>
+              <li><a ng-click="navCollapsed=true" href="#!/logout">Logout</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
