--- a/app/index-dev.html
+++ b/app/index-dev.html
@@ -25,9 +25,9 @@
   <link rel="stylesheet" href="bower_components/angular-pagedown/angular-pagedown.min.css" >
   <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-i18n/angular-locale_en-gb.js"></script>
-  <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="bower_components/pagedown/Markdown.Converter.js"></script>
   <script src="bower_components/leaflet/dist/leaflet.js"></script>
   <script src="bower_components/leaflet-draw/dist/leaflet.draw.js"></script>
@@ -82,26 +82,26 @@
       </footer>
     </div>
   </div>
-  <script src="bower_components/angular-messages/angular-messages.min.js"></script>
-  <script src="bower_components/angular-route/angular-route.min.js"></script>
-  <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-  <script src="bower_components/angular-paging/dist/paging.min.js"></script>
-  <script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
-  <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-  <script src="bower_components/angular-validation-match/dist/angular-validation-match.min.js"></script>
-  <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-  <script src="bower_components/lodash/dist/lodash.min.js"></script>
-  <script src="bower_components/socket.io-client/dist/socket.io.min.js"></script>
-  <script src="bower_components/angular-socket-io/socket.min.js"></script>
-  <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.min.js"></script>
-  <script src="bower_components/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js"></script>
-  <script src="bower_components/open-location-code/js/src/openlocationcode.min.js"></script>
+  <script src="bower_components/angular-messages/angular-messages.js"></script>
+  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="bower_components/angular-paging/dist/paging.js"></script>
+  <script src="bower_components/angular-jwt/dist/angular-jwt.js"></script>
+  <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
+  <script src="bower_components/angular-validation-match/dist/angular-validation-match.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/lodash/dist/lodash.js"></script>
+  <script src="bower_components/socket.io-client/dist/socket.io.js"></script>
+  <script src="bower_components/angular-socket-io/socket.js"></script>
+  <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
+  <script src="bower_components/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.js"></script>
+  <script src="bower_components/open-location-code/js/src/openlocationcode.js"></script>
   <script src="bower_components/proj4/dist/proj4.js"></script>
   <script src="bower_components/pagedown/Markdown.Sanitizer.js"></script>
   <script src="bower_components/pagedown/Markdown.Extra.js"></script>
   <script src="bower_components/pagedown/Markdown.Editor.js"></script>
-  <script src="bower_components/angular-pagedown/angular-pagedown.min.js"></script>
+  <script src="bower_components/angular-pagedown/angular-pagedown.js"></script>
   <script src="js/app.js"></script>
   <script src="js/coord-filter.js"></script>
   <script src="js/admin-password-reset-controller.js"></script>
