Updated to AngularJS 1.6.6

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -4,6 +4,7 @@
 <!--[if IE 8]>         <html lang="en" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
+  <base href="/trip/app/index-dev.html">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -139,18 +140,18 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#!/tracks">TRIP</a>
+            <a class="navbar-brand" href="/trip/app/tracks">TRIP</a>
           </div>
           <div id="navbar" uib-collapse="navCollapsed" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a ng-click="navCollapsed=true" href="#!/tracks">Tracking</a></li>
-              <li><a ng-click="navCollapsed=true" href="#!/tracker-info">Tracker Info</a></li>
-              <li><a ng-click="navCollapsed=true" href="#!/sharing">Track Sharing</a></li>
-              <li><a ng-click="navCollapsed=true" href="#!/itineraries">Itineraries</a></li>
-              <li><a ng-click="navCollapsed=true" href="#!/location">Location</a></li>
-              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="#!/users">Users</a></li>
-              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="#!/status">Status</a></li>
-              <li><a ng-click="navCollapsed=true" href="#!/logout">Logout</a></li>
+              <li><a ng-click="navCollapsed=true" href="/trip/app/tracks">Tracking</a></li>
+              <li><a ng-click="navCollapsed=true" href="/trip/app/tracker-info">Tracker Info</a></li>
+              <li><a ng-click="navCollapsed=true" href="/trip/app/sharing">Track Sharing</a></li>
+              <li><a ng-click="navCollapsed=true" href="/trip/app/itineraries">Itineraries</a></li>
+              <li><a ng-click="navCollapsed=true" href="/trip/app/location">Location</a></li>
+              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="/trip/app/users">Users</a></li>
+              <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="/trip/app/status">Status</a></li>
+              <li><a ng-click="navCollapsed=true" href="/trip/app/logout">Logout</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
