Implemented user password change

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -55,6 +55,7 @@
       'node_modules/angular-messages/angular-messages.min.js',
       'node_modules/angular-route/angular-route.min.js',
       'node_modules/angular-resource/angular-resource.min.js',
+      'node_modules/angular-cookies/angular-cookies.min.js',
       'node_modules/angular-paging/dist/paging.min.js',
       'node_modules/angular-jwt/dist/angular-jwt.min.js',
       'node_modules/angular-simple-logger/dist/angular-simple-logger.min.js',
@@ -72,6 +73,7 @@
       'node_modules/pagedown/Markdown.Extra.js',
       'node_modules/pagedown/Markdown.Editor.js',
       'node_modules/angular-pagedown/angular-pagedown.min.js',
+      'node_modules/zxcvbn/dist/zxcvbn.js',
       'js/app.js',
       'js/coord-filter.js',
       'js/admin-password-reset-controller.js',
@@ -151,6 +153,7 @@
               <li><a ng-click="navCollapsed=true" href="/trip/app/location">Location</a></li>
               <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="/trip/app/users">Users</a></li>
               <li ng-show="admin === true"><a ng-click="navCollapsed=true" href="/trip/app/status">Status</a></li>
+              <li><a ng-click="navCollapsed=true" href="/trip/app/account">Account</a></li>
               <li><a ng-click="navCollapsed=true" href="https://www.fdsd.co.uk/trip-web-client-docs/" target="_blank">Help</a></li>
               <li><a ng-click="navCollapsed=true" href="/trip/app/logout">Logout</a></li>
             </ul>
