Upgrade dependent packages to newer versions

--- a/app/index-dev.html
+++ b/app/index-dev.html
@@ -50,7 +50,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/trip/app/tracks">TRIP</a>
+            <a class="navbar-brand" href="/trip/app/tracks">TRIP-dev</a>
           </div>
           <div id="navbar" uib-collapse="navCollapsed" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -96,7 +96,7 @@
   <script src="node_modules/angular-animate/angular-animate.js"></script>
   <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   <script src="node_modules/lodash/dist/lodash.js"></script>
-  <script src="node_modules/socket.io-client/dist/socket.io.js"></script>
+  <script src="node_modules/socket.io-client/dist/socket.io.dev.js"></script>
   <script src="node_modules/angular-socket-io/socket.js"></script>
   <script src="node_modules/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
   <script src="node_modules/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.js"></script>
