--- a/app/index-async.html
+++ b/app/index-async.html
@@ -63,7 +63,7 @@
       'node_modules/angular-animate/angular-animate.min.js',
       'node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js',
       'node_modules/lodash/dist/lodash.min.js',
-      'node_modules/socket.io-client/dist/socket.io.min.js',
+      'node_modules/socket.io-client/dist/socket.io.js',
       'node_modules/angular-socket-io/socket.min.js',
       'node_modules/angular-file-saver/dist/angular-file-saver.bundle.min.js',
 	  'node_modules/angular-bootstrap-confirm/dist/angular-bootstrap-confirm.min.js',
