Implemented searching for itineraries within specified distance of location

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -85,6 +85,8 @@
       'js/itinerary-map-controller.js',
       'js/itinerary-sharing-controller.js',
       'js/itinerary-sharing-report-controller.js',
+      'js/itinerary-search-controller.js',
+      'js/itinerary-search-result-controller.js',
       'js/itinerary-wpt-controller.js',
       'js/itinerary-wpt-view-controller.js',
       'js/itinerary-route-name-controller.js',
