--- a/app/index.html
+++ b/app/index.html
@@ -118,6 +118,8 @@
   <script src="js/itinerary-map-controller.js"></script>
   <script src="js/itinerary-sharing-controller.js"></script>
   <script src="js/itinerary-sharing-report-controller.js"></script>
+  <script src="js/itinerary-search-controller.js"></script>
+  <script src="js/itinerary-search-result-controller.js"></script>
   <script src="js/itinerary-wpt-controller.js"></script>
   <script src="js/itinerary-wpt-view-controller.js"></script>
   <script src="js/itinerary-route-name-controller.js"></script>
