--- a/app/index-dev.html
+++ b/app/index-dev.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TRIP - Trip Recording and Itinerary Planner</title>
+  <title>TRIP - Trip Recording and Itinerary Planner{{pageTitle}}</title>
   <meta name="description" content="">
   <link rel="stylesheet" href="node_modules/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="node_modules/html5-boilerplate/dist/css/main.css">
