--- a/app/index-dev.html
+++ b/app/index-dev.html
@@ -25,13 +25,13 @@
   <link rel="stylesheet" href="node_modules/leaflet-draw/dist/leaflet.draw.css" >
   <link rel="stylesheet" href="node_modules/angular-pagedown/angular-pagedown.min.css" >
   <link rel="stylesheet" href="css/app.css">
-  <script src="node_modules/html5-boilerplate/dist/js/vendor/modernizr-3.6.0.min.js"></script>
+  <script src="node_modules/html5-boilerplate/dist/js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="node_modules/angular/angular.js"></script>
   <script src="node_modules/angular-i18n/angular-locale_en-gb.js"></script>
   <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
   <script src="node_modules/pagedown/Markdown.Converter.js"></script>
   <script src="node_modules/leaflet/dist/leaflet.js"></script>
-  <script src="node_modules/leaflet-draw/dist/leaflet.draw.js"></script>
+  <script src="node_modules/leaflet-draw/dist/leaflet.draw-src.js"></script>
   <script src="node_modules/ui-leaflet/dist/ui-leaflet.min.no-header.js"></script>
   <script src="node_modules/ui-leaflet-draw/dist/ui-leaflet-draw.js"></script>
 </head>
@@ -95,7 +95,6 @@
   <script src="node_modules/angular-validation-match/dist/angular-validation-match.js"></script>
   <script src="node_modules/angular-animate/angular-animate.js"></script>
   <script src="node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-  <script src="node_modules/lodash/dist/lodash.js"></script>
   <script src="node_modules/socket.io-client/dist/socket.io.dev.js"></script>
   <script src="node_modules/angular-socket-io/socket.js"></script>
   <script src="node_modules/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
