--- a/app/index-dev.html
+++ b/app/index-dev.html
@@ -41,7 +41,7 @@
   </noscript>
   <div id="wrapper">
     <div id="header" ng-cloak>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <nav class="navbar navbar-inverse navbar-static-top">
         <div class="container div-body">
           <div class="navbar-header">
             <button type="button" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed" class="navbar-toggle collapsed">
