Download and upload of entire itinerary in YAML format
- Option on itinerary page to create a duplicate of the itinerary

- Show time alongside itinerary start and finish times when the time is not
midnight.

    Viewed dates can be misleading, where itineraries are created and viewed
    with clients in different time zones.

--- a/app/index-async.html
+++ b/app/index-async.html
@@ -79,6 +79,7 @@
       'js/config-factory.js',
       'js/itineraries-controller.js',
       'js/itinerary-controller.js',
+      'js/itinerary-import-controller.js',
       'js/itinerary-edit-controller.js',
       'js/itinerary-factory.js',
       'js/itinerary-map-controller.js',
