--- a/app/index-dev.html
+++ b/app/index-dev.html
@@ -112,6 +112,7 @@
   <script src="js/config-factory.js"></script>
   <script src="js/itineraries-controller.js"></script>
   <script src="js/itinerary-controller.js"></script>
+  <script src="js/itinerary-import-controller.js"></script>
   <script src="js/itinerary-edit-controller.js"></script>
   <script src="js/itinerary-factory.js"></script>
   <script src="js/itinerary-map-controller.js"></script>
